# thesistrack

./: .dockerignore  .gitignore  GOOGLE_AUTH_SETUP.md  GOOGLE_OAUTH_SETUP.md  README.md  docker-compose.yml  next_steps.md  thesis_track_specification.md
.github/workflows/: deploy.yml
backend/: Dockerfile  alembic.ini  openapi.json  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 001_initial_database_schema.py  5bbec546fa1c_add_review_table_and_relationships.py  6c4d2e8f9a1b_fix_userrole_enum_values.py  add_location_to_deadline.py  add_profile_picture_to_user.py
backend/app/: main.py
backend/app/api/: deps.py
backend/app/api/v1/: api.py
backend/app/api/v1/endpoints/: attachments.py  auth.py  comments.py  committee.py  deadlines.py  events.py  requests.py  reviews.py  theses.py  users.py
backend/app/core/: config.py  deps.py  file_utils.py  security.py
backend/app/db/: base.py  base_class.py  session.py
backend/app/models/: __init__.py  attachment.py  comment.py  committee.py  deadline.py  event.py  request.py  review.py  thesis.py  user.py
backend/app/schemas/: __init__.py  attachment.py  comment.py  committee.py  deadline.py  event.py  request.py  review.py  thesis.py  user.py
backend/scripts/: init_db.sh  start.sh
frontend/: Dockerfile  index.html  package-lock.json  package.json  tailwind.config.js  tsconfig.json  vite.config.ts
frontend/src/: App.tsx  index.css  main.tsx
k8s/: DEPLOYMENT_GUIDE.md  configure.sh  deploy.sh  sync-env.sh
k8s/thesistrack/: Chart.yaml  (+1 more)
pdfs/: Дипломна_работа.md  Лилия Теодошева.txt
(+68 files in other folders)
